<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="8dp"
    android:visibility="gone"
    android:padding="4dp"
    android:id="@+id/optionsLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size"
        android:textStyle="bold"
        android:layout_marginBottom="4dp"/>

    <Spinner
        android:id="@+id/sizeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"/>

    <Spinner
        android:id="@+id/quantitySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/addToOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_order"
        android:layout_marginTop="8dp"/>
</LinearLayout>