<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/main_menu" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="867dp"
        android:contentDescription="@string/burgers_cd"
        app:layout_anchor="@+id/constraintLayout2"
        app:layout_anchorGravity="center">

        <ImageButton
            android:id="@+id/burgerButton"
            android:layout_width="168dp"
            android:layout_height="128dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/burgers"
            tools:layout_editor_absoluteY="110dp" />

        <ImageButton
            android:id="@+id/beveragesButton"
            android:layout_width="183dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:contentDescription="@string/view_beverages"
            android:focusable="true"
            android:src="@drawable/beverages"
            tools:layout_editor_absoluteX="109dp"
            tools:layout_editor_absoluteY="271dp" />

        <ImageButton
            android:id="@+id/sandwichButton"
            android:layout_width="182dp"
            android:layout_height="139dp"
            android:layout_marginTop="24dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toBottomOf="@+id/beveragesButton"
            app:srcCompat="@drawable/sandwiches"
            tools:layout_editor_absoluteX="111dp" />

        <ImageButton
            android:id="@+id/sidesButton"
            android:layout_width="138dp"
            android:layout_height="117dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sandwichButton"
            app:srcCompat="@drawable/fries" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:text="@string/burgers_cd"
            android:textColor="#FAFAFA"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="@+id/burgerButton"
            app:layout_constraintEnd_toEndOf="@+id/burgerButton"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="@+id/burgerButton" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/sandwiches_cd"
            android:textColor="@color/black"
            android:textColorLink="#673AB7"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/sandwichButton"
            app:layout_constraintEnd_toEndOf="@+id/sandwichButton"
            app:layout_constraintHorizontal_bias="0.862"
            app:layout_constraintStart_toStartOf="@+id/sandwichButton"
            app:layout_constraintTop_toTopOf="@+id/sandwichButton"
            app:layout_constraintVertical_bias="0.072" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="42dp"
            android:text="@string/sides"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@+id/sidesButton"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="@+id/sidesButton"
            app:layout_constraintTop_toTopOf="@+id/sidesButton" />

        <ImageButton
            android:id="@+id/currentOrder"
            android:layout_width="116dp"
            android:layout_height="73dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/burgerButton"
            app:srcCompat="@drawable/shopping_cart"
            tools:layout_editor_absoluteY="74dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/beverages_cd"
            android:textColor="#E91E63"
            android:textColorLink="#874F4F"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@+id/beveragesButton"
            tools:layout_editor_absoluteX="122dp" />

        <ImageButton
            android:id="@+id/orders"
            android:layout_width="99dp"
            android:layout_height="84dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/burgerButton"
            app:srcCompat="@drawable/orders"
            tools:layout_editor_absoluteY="74dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>